<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvRateInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRateInfo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgSelect"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb3" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb4" />
        </RadioGroup>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        >

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/iv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

    </FrameLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:stepSize="0.5"/>

    <android.widget.Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/rate" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvRateListInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/rateList" />

        <TextView
            android:id="@+id/tvRateItem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rateItem1" />

        <TextView
            android:id="@+id/tvRateItem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rateItem2" />

        <TextView
            android:id="@+id/tvRateItem3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rateItem3" />

        <TextView
            android:id="@+id/tvRateItem4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rateItem4" />

    </LinearLayout>


</LinearLayout>